# Software-Defect-Prediction

./: .gitignore  0898.py  DISCLAIMER.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml  ensemble.yaml  xgboost.yaml
demo/: streamlit_app.py
notebooks/: quick_start.ipynb
scripts/: evaluate.py  train.py
src/: __init__.py
src/data/: __init__.py  synthetic_data.py
src/evaluation/: metrics.py
src/explainability/: __init__.py  shap_explainer.py
src/features/: feature_engineering.py
tests/: test_defect_prediction.py
